--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9999,6 +9999,8 @@ a.text-dark:focus {
   padding: 20px;
   color: #fff;
   background: #32383e;
+  position: absolute;
+  width: 100%;
 }
 
 h1 {
